@@ -35,3 +35,4 @@ Daniel Pieper @danielpieper <monica@daniel-pieper.com>
 Andrew Paul Smith <github@chucklesthebeard.com>
 Brian Clemens <brian@tiuxo.com>
 Christopher Zentgraf @TheZenti <git@the-zenti.de>
+Lorenzo L. Ancora @LorenzoAncora <admin@lorenzoancora.info>
