@@ -27,7 +27,7 @@ class CreateLifeEventsTable extends Migration
             $table->increments('id');
             $table->unsignedInteger('default_life_event_category_id');
             $table->string('translation_key');
-            $table->text('specific_information_structure');
+            $table->text('specific_information_structure')->nullable();
             $table->boolean('migrated')->default(0);
             $table->timestamps();
             $table->foreign('default_life_event_category_id')->references('id')->on('default_life_event_categories')->onDelete('cascade');
